2017-08-08  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-scroll-up, w3m-scroll-down): Make argument default to 1
	if called interactively so that w3m-scroll-up-or-next-url and
	w3m-scroll-down-or-previous-url work as before.  [emacs-w3m:12783]

2017-08-04  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-cookie.el (w3m-cookie-1-acceptable-p):
	Use url-domsuf-cookie-allowed-p if available to check if a domain is
	unique to allow having cookies set.  [emacs-w3m:12782]

2017-08-03  Boruch Baum  <boruch_baum@gmx.com>

	* w3m.el (w3m-scroll-up, w3m-scroll-down): Remove restriction of using
	prefix-argument, remove code that fixes bug in emacs v21.
	(w3m-mwheel-scroll-up, w3m-mwheel-scroll-down): Delete.
	(w3m-mode): Change local bindings of `mwheel-scroll-up-function' and
	`mwheel-scroll-down-function' to `w3m-scroll-up' and `w3m-scroll-down'.
	[emacs-w3m:12779]

2017-08-02  Boruch Baum  <boruch_baum@gmx.com>

	* w3m-search.el (w3m-search-engine-alist): Update URL for debian
	package search, and change its default parameters from i386
	architecture to amd64.  [emacs-w3m:12776]

2017-07-28  defanor  <defanor@uberspace.net>

	"google feeling lucky" to "feeling searchy" ([emacs-w3m:12774])

	* w3m.el (w3m-enable-feeling-searchy):
	Rename from w3m-enable-google-feeling-lucky.
	(w3m-canonicalize-url):
	Doc fix; use w3m-search-do-search to generate url.
	(w3m-canonicalize-url, w3m-input-url, w3m-view-this-url, w3m-goto-url)
	(w3m-goto-url-new-session, w3m): feeling-lucky to feeling-searchy.

2017-07-26  Katsumi Yamaoka  <yamaoka@jpl.org>

	Fix cookies handling ([emacs-w3m:12768], [emacs-w3m:12772])

	Regard a Set-Cookie header as it contains a single cookie, that is,
	the one at the beginning of the field is it and succeeding semi-colon
	separated ones are the attributions of it.  Formerly the Lisp code
	regarded the semi-colon separated ones as all individual cookies, and
	therefore the locally stored cookies would potentially be all bogus.